public/styles/main.css
body {
	padding: 0;
	margin: 0;
	height: clear;
	/*padding-top: 70px;*/
}



.menu {
	position: fixed;
	top: 0;
	width: 100%;
	padding: 0 100px;
	color: #555;
	text-transform: uppercase;
	/*padding-top: 10px;*/
	height: 40px;
	background-color: rgba(0,0,0,0.75);
	/*background-color: rgba(255,255,255,0.75);*/
	z-index: 999;
	/*text-align: center;*/
}

.menu .burger img {
	height: 100%;
	opacity: 0.5;

}

.menu a:link,
.menu a:visited {
	color: #bbb;
}

.menu a {
	letter-spacing: 2;
	text-align: center;
	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
	width: 10%;
	color: #bbb;
	line-height: 40px;
	margin: 0 10px;
	font-size: 13px;
}

.menu a:hover,
.menu a:active {
	color: #fff;
}

.dropdown_menu {
	display: block;
}

.menu_dots {
	display: none;
}

.dropdown_menu {
	/*background-color: rgba(255,255,255,0.9);*/
	/*width: 250px;*/
	text-align: left;
}

.dropdown_menu a {
	/*display: block;*/
	/*margin: 0 5px;*/
	/*color: #333;*/
}

.row {
	margin: 0;
	/*text-align: center;*/
}

.content_row {
	/*padding-top: 70px;*/
	/*margin-bottom: 150px;*/
	/*min-height: 100%;*/
	/*padding-bottom: 15px;*/
	/*border-bottom: 5px solid rgba(0,0,0,0.25);*/
	/*margin-bottom: 15px;*/
}

.home-col {
	position: relative;
	/*height: 100%;*/
}

.splash {
	position: absolute;
	width: 100%;
	height: 100%;
	overflow: hidden;
	text-align: center;
	left: -10%;
}

.splash img {
	/*width: 120%;*/
	height: 90%;
	-webkit-filter: grayscale(100%);
	filter: gray;
	filter: grayscale(1);
	margin-left: -50px;
	opacity: 1;
	/*transition: margin-left 3s, opacity 4s;*/
}



.mhidden {
	opacity: 0;
	transition: opacity 2s;
}

.col {
	background-color: #f00;
}

/* Parent container for the element that needs
   to be vertically centered */
.block {
  text-align: center;
  /*padding-left: 30%;*/
  white-space: nowrap;
}

.block:before {
  content: '';
  display: inline-block;
  /*height: 100%;*/
  vertical-align: middle;
  margin-right: -0.25em; /* Adjusts for spacing */
  margin-top: -5%;
}


.centered {
  display: inline-block;
  vertical-align: middle;
  width: 100%;
  position: relative;
  padding: 10px 0;
}

.title_content {
	background-color: rgba(41,165,243,0.5);
	padding: 10px 0;
}

.dp {
	border-radius: 200px;
	/*-webkit-filter: grayscale(60%);
	filter: gray;
	filter: grayscale(1);*/
	/*opacity: 0.95;*/
	margin: 15px;
	height: 125px;
}

.name, .section_tile_title {
	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
	font-size: 1.5em;
	font-weight: 300;
	line-height: 135%;
	color: #000;
	letter-spacing: 6;
	width: 100%;
	padding: 5px;
	text-transform: uppercase;
}

.desc {
	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
	font-size: 1em;
	font-weight: 300;
	line-height: 135%;
	color: #333;
	letter-spacing: 6;
	width: 100%;
	text-transform: uppercase;
}

/*
.name:before {
	content: '';
	position: absolute;
	width: 35%;
	border-bottom: 1px solid #ccc;
	left: 0;
	top: 169;
}

.name:after {
	content: '';
	position: absolute;
	width: 35%;
	border-bottom: 1px solid #ccc;
	left: 65%;
	top: 169;
}*/

.arrow_container {
	position: relative;
	margin-top: 100px;
	width: 75px;
	height: 50px;
	margin-left: auto;
	margin-right: auto;
}

.bounce {
  position:absolute;
  /*left:50%;*/
  bottom:0;
  height:75px;
  width:75px;
  background:url(../resources/down_arrow.png);
  background-size: cover;
  -webkit-animation:bounce 2.5s infinite;
  cursor: pointer;
}


@-webkit-keyframes bounce {
  0%, 50%, 100%		{ bottom:0px; opacity: 0.5;}
  25%, 75% 			{ bottom:10px; opacity: 0.75;}
}

.static_arrow {
  /*left:50%;*/
  height:30px;
  width:60px;
  background:url(../resources/menu_arrow.png);
  background-size: cover;
  cursor: pointer;
  transform: rotate(270deg);
  transition: transform 1s;
}

.static_arrow:hover {
	transform: rotate(360deg);
}

.section_name {
	/*margin-left: 25px;*/
	margin-bottom: 10px;
	text-align: center;
	/*margin-top: 70px;*/
}

.item_box {
	display: inline-block;
	/*width: 33.33%;*/
	padding: 2px;
	width: calc(25% - 4px);
	vertical-align: top;
	cursor: pointer;
	/*transition: 1s ease-in-out;*/
}

/*.item_box:hover {
	-webkit-filter: grayscale(0%);
	filter: gray;
	filter: grayscale(1);
	transition: 1s ease-in-out;
}*/

a {
	text-decoration: none;
}

.section_title {
	/*height: 100%;*/
	width: 100%;
	text-align: center;
	text-transform: uppercase;
	font-weight: 1000;
	font-family: 'Oswald', sans-serif;
	font-size: 3em;
	vertical-align: middle;
	margin-top: 15px;
	height: 150px;
}

.project {
	background-color: #777;
}

.item {
	position: relative;
	/*background: url('../resources/arch_splash.png');*/
	background-size: auto;
	background-repeat: no-repeat;
	/*outline: 3px solid #777;*/
	height: 100%;
	background-clip: content-box;
}

.item_cover {
	position: absolute;
	opacity:0;
	height: 100%;
	width: 100%;
	/*background: url('../resources/gradient.png');
	background-position: 0 200;
	background-repeat-y: no-repeat;*/
	background-size: 20px 100%;
	/*background-color: rgba(0,0,0,0.25);*/
	background-clip: content-box;
	/*padding:10px;*/
	top: 0px;
	left: 0px;
	/*transition: top 1s, opacity 0.5s;*/
	transition: background-position 0.75s, opacity 1s ease-in-out;
}

.item_cover:nth-of-type(3n) {
	background-color: #0080ff;
}

.item_cover:nth-of-type(3n+1) {
	background-color: #ff0080;
}

.item_cover:nth-of-type(3n+2) {
	background-color: #80ff00;
}


.item_cover_hover {
	/*background-position: 0 0;*/
	opacity: 0.6;
}

.item_cover_hover + .item_desc {
	opacity: 1;
}

.item_cover:hover {
	/*background-position: 0 0;*/
	opacity: 0.6;
}

.item_cover:hover + .item_desc {
	opacity: 1;
}

.item_desc {
	cursor: pointer;
	width: 95%;
	padding-right: 30px;
	text-align: right;
	position: absolute;
	color: #fff;
	/*text-shadow: 2px 2px 1px #000;*/
	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
	font-size: 1em;
	font-weight: 200;
	letter-spacing: 1.2;
	top: 80%;
	/*left: 20;*/
	opacity: 0;
	transition: opacity 0.5s;
	pointer-events: none;
	text-transform: uppercase;
}

.item_desc p {
	font-size: 1.2em;
	padding: 0;
	margin: 0;
}

.col-lg-3 {
	height: 300px;
}

.title_col{
	width: 25%;
	display: inline-block;
	vertical-align: top;
}

.projects_col {
	display: inline-block;
	width: 100%;
	text-align: center;
}

/*@media (max-width: 1200px) {
	.projects_col, .title_col {
		display: block;
		width: 100%;
	}
}
*/

@media (max-width: 1200px) {
	.item_box {
		width: calc(33.33% - 4px);
	}

	.blank_box_1, .blank_box_2 {
		display: none;
	}
}

@media (max-width: 1050px) {
	.item_box {
		width: calc(50% - 4px);
		/*margin: 5px 0.9%;*/
	}
	.menu {
		text-align: center;
		/*padding: 0;*/
	}

	#projects_container .blank_box_1 {
		display: inline-block;
	}

	#graphics_container .blank_box_2 {
		display: inline-block;
	}
}

@media (max-width: 700px) {
	.item_box {
		min-width: 350px;
		width: calc(100% - 4px);
		/*margin: 5px 0.9%;*/
	}

	.menu_dots {
		display: block;
	}

	.dropdown_menu {
		display: none;
	}

	.menu {
		padding: 0;
		font-size: 0.8em;
	}

	.projects_col {
		text-align: center;
	}

	#projects_container .blank_box_1 {
		display: none;
	}

	#graphics_container .blank_box_2 {
		display: none;
	}

	.blank_box_2, .blank_box_1 {
		display: none;
	}
}

.menu_dots {
	padding-top: 5px;
}

.dot {
	display: inline-block;
	vertical-align: middle;
	width: 15px;
	height: 15px;
	/*background-color: #bbb;*/
	background-color: #fff;
	border-radius: 25px;
	margin: 5px;
	cursor: pointer;
	transition: background-color 0.25s ease-in-out;
}

.dot_selected {
	background-color: rgba(41,165,243,0.5);
}

.menu_dots:hover > .dot {
	background-color: rgba(41,165,243,0.75);
}

.section_tile {
	background-color: rgb(85,85,85);
	background-clip: content-box;
	cursor: default;
}

.section_tile_title {
	text-align: right;
	position: absolute;
	color: #fff;
	bottom: 10;
	right: 10;
}

.blank_box_1 {
	background-color: rgb(137,137,137);
	background-clip: content-box;
	cursor: default;
}

.blank_box_2 {
	background-color: rgb(85,85,85);
	background-clip: content-box;
	cursor: default;
}

.box-shadow-menu {
  position: relative;
  padding-left: 1.25em;
}
.box-shadow-menu:before {
  content: "";
  position: absolute;
  left: 0;
  top: 0.25em;
  width: 1em;
  height: 0.15em;
  background: black;
  box-shadow:
    0 0.25em 0 0 black,
    0 0.5em 0 0 black;
}

#splash_container {
	margin-top: 40px;
	/*height: inherit;*/
	/*margin-bottom: 15px;*/
	margin-bottom: 0;
	min-height: 0;
}

#about_container {
	padding-top: 40px;
}

.section_text_content {
	text-align: center;
	color: #777;
	padding-bottom: 100px;
	cursor: default;
	height: 100%;
}

.section_text_content span {
	cursor: default;
}

.section_text_content img {
	opacity: 0.6;
	height: 35px;
	margin-right: 5px;
	vertical-align: middle;
}

.section_text_content > div {
	margin-right: 10px;
	display: inline-block;
}

.section_text_content a {
	color: #777;
	text-decoration: underline;
}

.section_text_content .image_container {
	display: inline-block;
	/*width: 50px;*/
	text-align: right;
}

.section_text_content .text_container {
	display: inline-block;
	/*width: 180px;*/
	text-align: left;
}

.resume_container div {
	display: block;
}

.resume_container img {
	width: 90%;
	height: inherit;
	margin: 5px;
}

